--- a/src/ohri-dashboard/ohri-dashboard.scss
+++ b/src/ohri-dashboard/ohri-dashboard.scss
@@ -1,20 +1,36 @@
 @import "../root.scss";
 
+.dashboardContainer {
+  display: -webkit-flex;
+  height: 90vh;
+  position: relative;
+  overflow-y: hidden;
+}
+
+.dashboardContent {
+  margin: 0;
+  flex-basis: 75%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  position: relative;
+  overflow-y: auto;
+  margin-left: 15.5rem;
+}
+
 .noMarker {
   list-style-type: none;
 }
 
 .noMarker ul li a {
   padding-left: 40px !important;
-  font: lighter  ;
-
+  font: lighter;
 }
 
 .currentNavItem > a {
   background-color: #cecece !important;
   color: #161616 !important;
   border-left-color: #005d5d !important;
-  font: bolder ;
+  font: bolder;
 }
 
 .hide {
