--- a/src/ohri-dashboard/side-menu/ohri-dashboard-side-nav.scss
+++ b/src/ohri-dashboard/side-menu/ohri-dashboard-side-nav.scss
@@ -2,10 +2,10 @@
 
 .sideNav {
   width: 16rem;
-  padding-top: 2rem;
+  // padding-top: 2rem;
   min-height: 8rem;
   overscroll-behavior: contain;
-  margin: 1px 13px 15px 0;
+  margin: 48px 13px 15px 0;
   border-right: 1px #e0e0e0;
 }
 
@@ -20,6 +20,17 @@
   background-color: $brand-teal-01;
 }
 
-:global(.bx--side-nav) {
-  z-index: -100;
+.sideNav :global(ul.bx--side-nav__items) {
+  border-style: solid !important;
+  border-right: 1px #e0e0e0;
+}
+
+@media (max-width: 1200px) {
+  .sideNav :global(.bx--side-nav) {
+    z-index: -100 !important;
+  }
+
+  .sideNav :global(.bx--side-nav__items) {
+    padding: 0 !important;
+  }
 }
