Add support for inline-rendering

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -1,7 +1,7 @@
 @import "../../../root.scss";
 
 .formField {
-  padding-bottom: 18px;
+  // padding-bottom: 18px;
   margin-top: 10px;
 }
 
@@ -128,7 +128,7 @@
 }
 
 .unspecified {
-  margin-top: -13px;
+  // margin-top: -13px;
 }
 
 .unspecified > div label {
