--- a/src/ohri-dashboard/side-menu/ohri-dashboard-side-nav.scss
+++ b/src/ohri-dashboard/side-menu/ohri-dashboard-side-nav.scss
@@ -17,7 +17,7 @@
 .sideNav :global(a.bx--side-nav__link[aria-current=page]:before),
 .sideNav :global(.bx--side-nav__submenu[aria-expanded=false]:before)
 {
-  background-color: $brand-teal-01;
+  // background-color: $brand-teal-01;
 }
 
 .sideNav :global(ul.bx--side-nav__items) {
