--- a/src/ohri-dashboard/ohri-dashboard.scss
+++ b/src/ohri-dashboard/ohri-dashboard.scss
@@ -31,7 +31,7 @@
 .currentNavItem > a {
   background-color: #cecece !important;
   color: #161616 !important;
-  border-left-color: #005d5d !important;
+  border-left-color: $brand-color-01 !important;
   font: bolder;
 }
 
