Fix markdown render, add Maximize

--- a/src/forms/form-render/form-render.scss
+++ b/src/forms/form-render/form-render.scss
@@ -40,7 +40,7 @@
 }
 
 .widgetHeaderContainer > h4:after {
-  content: "";
+  content: ' ';
   display: block;
   width: 2rem;
   padding-top: 0.188rem;
@@ -112,4 +112,22 @@
 .jsonEditor,
 .finalJsonSchema {
   border: 0.01rem dotted #6f6f6f !important;
+}
+
+
+.viewMode h4 {
+  float: left;
+}
+
+.viewMode button {
+  float: right;
+  display: none;
+}
+
+.show {
+  display: block !important;
+}
+
+.hide {
+  display: none;
 }
