--- a/src/forms/ohri-form.scss
+++ b/src/forms/ohri-form.scss
@@ -9,7 +9,7 @@
 
 .ohriFormContainer {
   display: -webkit-flex;
-  height: 90vh;
+  height: 100vh;
   overflow-y: hidden;
 }
 
@@ -30,7 +30,8 @@
 
 .formContentBody {
   overflow-y: auto;
-  height: 77.5vh;
+  // height: 77.5vh;
+  margin-bottom: 100px;
   width: inherit;
   position: sticky;
 }
@@ -42,14 +43,17 @@
 }
 
 @media(max-width: 1000px) {
-  .pageHeader {
-    margin-left: 15px;
-  }
+
 }
 
-.minifiedFormContentBody > div > div p {
-  padding-left: 1rem !important;
+:global(.patientChartWrapper) aside,
+:global(.patientChartWrapper) :global(.omrs-breakpoint-gt-tablet) {
+  border-left: 1px solid #8d8d8d !important;
 }
+
+// aside {
+//   border-left: 1px solid #8d8d8d !important;
+// }
 
 .minifiedButtons {
   width: 100%;
@@ -57,6 +61,7 @@
 
 .minifiedButtons :global(.bx--btn) {
   max-width: 50%;
+  height: 3.9rem;
 }
 
 .minifiedButtons > button {
