--- a/src/ohri-home/ohri-home.scss
+++ b/src/ohri-home/ohri-home.scss
@@ -1,7 +1,7 @@
 @import "../root.scss";
 
 .mainWrapper {
-    // max-width: 1440px;
+    max-width: 100%;
     min-height: 100vh;
     background-color: #ffffff;
     padding: 16px !important;
