--- a/src/components/patient-chart/ohri-patient-chart-sidenav.scss
+++ b/src/components/patient-chart/ohri-patient-chart-sidenav.scss
@@ -7,8 +7,8 @@
 .ohriPatientChartSideNavItem {
   list-style-type: none;
   background-color: #F4F4F4 !important;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   margin-top: 5rem;
   border-top: 1px solid #E1E1E1;
   border-bottom: 1px solid #E1E1E1;
@@ -16,6 +16,13 @@
 
 .ohriPatientChartSideNavItem > a {
   background-color: #F4F4F4 !important;
-  color: #161616 !important; // #262626
+  color: #161616 !important;
   font: bolder ;
+  font-size: 16px;
+  padding-left: 1rem !important;
+  border: none;
+}
+
+.ohriPatientChartSideNavItem > a > span {
+  font-size: 16px !important;
 }
