OHRI-734 remove pharmacy from ohri dashboard

--- a/src/components/patient-chart/ohri-patient-chart-sidenav.scss
+++ b/src/components/patient-chart/ohri-patient-chart-sidenav.scss
@@ -20,7 +20,7 @@
   font: bolder ;
   font-size: 16px;
   padding-left: 1rem !important;
-  border: none;
+  border: none !important;
 }
 
 .ohriPatientChartSideNavItem > a > span {
