OHRI-733 remove focused blue border on opening cohort overflow menu

--- a/src/components/patient-lists/patient-list-cohort.scss
+++ b/src/components/patient-lists/patient-list-cohort.scss
@@ -17,3 +17,7 @@
 :global(.bx--overflow-menu--flip.bx--overflow-menu-options) {
   min-width: 13rem !important;
 }
+
+:global(.bx--overflow-menu-options__btn):focus {
+  outline: none;
+}
