OHRI-681 Partner Notification Form and list added to the partner notification services

--- a/src/pages/common.scss
+++ b/src/pages/common.scss
@@ -27,3 +27,12 @@
 .tabContainer div[role='tabpanel'] {
   padding: 0 !important;
 }
+
+.tabContainer li button {
+  width: 100% !important;
+  }
+  
+  
+  .hivStatusTag {
+  min-width: 80px;
+  }
