OHRI-717: Add support for use previous value

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -186,3 +186,13 @@
   font-size: 0.75rem;
   white-space: pre-line !important;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.reviewPreviousValueRadioOverrides div {
+  width: auto !important;
+}
