--- a/packages/esm-form-render-app/src/render/form-render.scss
+++ b/packages/esm-form-render-app/src/render/form-render.scss
@@ -1,8 +1,7 @@
-@import "../root.scss";
+@import "../../root.scss";
 
 .mainWrapper {
-  //max-width: 1440px;
-  min-height: 100vh;
+  // height: 95vh;
   background-color: $ui-background;
   padding: 16px !important;
   margin: auto;
@@ -40,11 +39,11 @@
 }
 
 .widgetHeaderContainer > h4:after {
-  content: "";
+  content: ' ';
   display: block;
   width: 2rem;
   padding-top: 0.188rem;
-  border-bottom: 0.375rem solid $brand-teal-01;
+  border-bottom: 0.375rem solid $brand-color-01;
 }
 
 .toggleButtons {
@@ -53,7 +52,8 @@
 }
 
 .formRenderContent {
-  min-height: 780px;
+  // min-height: 780px;
+  height: 84vh;
 }
 
 .formRenderContent > div {
@@ -70,6 +70,7 @@
 }
 
 .formRenderDisplay {
+  height: 75vh;
   padding: 0;
   border: 0.01rem dotted #6f6f6f !important;
   margin-top: 0.5rem;
@@ -112,4 +113,22 @@
 .jsonEditor,
 .finalJsonSchema {
   border: 0.01rem dotted #6f6f6f !important;
+}
+
+
+.viewMode h4 {
+  float: left;
+}
+
+.viewMode button {
+  float: right;
+  display: none;
+}
+
+.show {
+  display: block !important;
+}
+
+.hide {
+  display: none;
 }
