--- a/packages/esm-ohri-core-app/src/components/all-patients-list/patient-list.scss
+++ b/packages/esm-ohri-core-app/src/components/all-patients-list/patient-list.scss
@@ -1,4 +1,4 @@
-@import "../../root";
+@import '../../root.scss';
 
 .widgetContainer {
   background-color: $ui-background;
@@ -12,26 +12,14 @@
 }
 
 .widgetHeaderContainer > h4:after {
-  content: "";
+  content: '';
   display: block;
   width: 2rem;
   padding-top: 0.188rem;
   border-bottom: 0.375rem solid $brand-color-01;
 }
 
-.newServiceEnrolmentBtn {
-  margin-bottom: 0.5em;
-  text-align: right;
-}
-
-.newServiceEnrolmentBtn > button {
-  background-color: $ui-background;
-}
-
 .toggleButtons {
-  //padding-right: 2rem;
-}
-
-.widgetContainer :global(.bx--data-table) thead th button span {
-  height: unset !important;
+  width: fit-content;
+  margin: 0 $spacing-03;
 }
