Add search functionality and results view

--- a/packages/esm-ohri-core-app/src/components/all-patients-list/patient-list.scss
+++ b/packages/esm-ohri-core-app/src/components/all-patients-list/patient-list.scss
@@ -23,3 +23,9 @@
   width: fit-content;
   margin: 0 $spacing-03;
 }
+// .searchField {
+//   padding: 10px;
+//   margin: 10px 10px;
+//   border: 2px !important;
+//   width: 30%;
+// }
