--- a/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
+++ b/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
@@ -19,22 +19,21 @@
     height: unset !important;
 }
 
-/**  Tile Styles */
 
-.currentARvRegimenContainer {
-    display: flex;
-    // justify-content: space-between;
-    background-color: $ui-background;
-    flex-direction: column;
+.title {
+    @extend .productiveHeading03;
 }
 
-.currentARvRegimenHeader {
+/* OHRI Tile Styles*/
+
+/** HIV Tile Styles */
+.cardTitle {
     display: flex;
     justify-content: space-between;
     padding: $spacing-04 0 $spacing-04 $spacing-05;
 }
 
-.currentARvRegimenHeader>h4:after {
+.cardTitle>h4:after {
     content: "";
     display: block;
     width: 2rem;
@@ -42,88 +41,68 @@
     border-bottom: 0.375rem solid $brand-teal-01;
 }
 
-.background {
-    width: 200px;
-    height: 78px;
-    margin: 0 0 8px;
-    padding: 0 1px 20px 0;
+.tile {
+    height: 100%px;
+    padding: 1px 0 16px 16px;
+    margin: 20px 20px;
     border: solid 1px #e0e0e0;
-    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+
 }
 
-.title {
-    @extend .productiveHeading03;
+.tileTitle {
+    height: 18px;
+    margin: 15px 65px 24px 0;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.29;
+    letter-spacing: 0.16px;
+    color: #525252;
+    display: block;
 }
 
-/** HIV Tile Styles */
-
-.hivTileItemTextLabel {
-    width: 18px;
-    height: 52px;
-    padding: 0 5px 0 0;
+.tileSubTitle {
+    height: 16px;
+    font-size: 16px;
+    line-height: 1.33;
+    letter-spacing: 0.32px;
+    color: #525252;
+    display: block;
 }
 
-.hivNumber {
-    width: 68px;
-    height: 36px;
-    margin: 16px 25px 0 0;
-    font-family: IBMPlexSans;
+.tileValue {
+    display: block;
+    margin: 5px 35px 0 0;
     font-size: 28px;
-    font-weight: normal;
+    line-height: 1.29;
+    color: #161616;
+}
+
+
+.tabletTileTitle {
+    margin: 20px 39px 24px 0;
+    font-size: 14px;
+    font-weight: 500;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.29;
-    letter-spacing: normal;
-    color: var(--gray-gray-100);
+    letter-spacing: 0.16px;
+    color: #525252;
 }
 
-.hivDate {
-    width: 76px;
-    height: 16px;
-    margin: 52px 22px 0 0;
-    font-family: IBMPlexSans;
-    font-size: 12px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.33;
-    letter-spacing: 0.32px;
-    color: var(--gray-gray-60);
+.tileBox {
+    width: 20%;
+    display: 'flex';
+    flex-direction: 'row';
 }
 
-/** ARV Regimen  Styles */
-
-.labelARV {
-    width: 106px;
-    height: 16px;
-    margin: 0 0 4px;
-    font-family: IBMPlexSans;
-    font-size: 12px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.33;
-    letter-spacing: 0.32px;
-    color: var(--gray-gray-70);
+.tileBoxColumn {
+    width: 90%;
+    display: 'flex';
+    flex-direction: 'row';
 }
 
-.textARV {
-    width: 101px;
-    height: 22px;
-    margin: 4px 5px 0 0;
-    font-family: IBMPlexSans;
-    font-size: 16px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.38;
-    letter-spacing: normal;
-    color: #161616;
 
-}
-
-.tileItemTextLabelHorizantal {
-    width: 98px;
-    height: 52px;
-    padding: 10 5px;
-}
+/** ARV Tile Styles */
