--- a/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
+++ b/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
@@ -25,8 +25,6 @@
 }
 
 /* OHRI Tile Styles*/
-
-/** HIV Tile Styles */
 .cardTitle {
     display: flex;
     justify-content: space-between;
@@ -41,17 +39,16 @@
     border-bottom: 0.375rem solid $brand-teal-01;
 }
 
+/** HIV Tile Styles */
 .tile {
-    height: 100%px;
+    height: 100%;
     padding: 1px 0 16px 16px;
     margin: 20px 20px;
     border: solid 1px #e0e0e0;
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
-
 }
-
 .tileTitle {
     height: 18px;
     margin: 15px 65px 24px 0;
@@ -62,7 +59,6 @@
     color: #525252;
     display: block;
 }
-
 .tileSubTitle {
     height: 16px;
     font-size: 16px;
@@ -71,18 +67,14 @@
     color: #525252;
     display: block;
 }
-
 .tileValue {
     display: block;
-    margin: 5px 35px 0 0;
     font-size: 28px;
     line-height: 1.29;
     color: #161616;
 }
-
-
 .tabletTileTitle {
-    margin: 20px 39px 24px 0;
+    margin: 0px 0px 10px 20px;
     font-size: 14px;
     font-weight: 500;
     font-stretch: normal;
@@ -91,18 +83,67 @@
     letter-spacing: 0.16px;
     color: #525252;
 }
-
 .tileBox {
     width: 20%;
     display: 'flex';
     flex-direction: 'row';
 }
-
 .tileBoxColumn {
     width: 90%;
     display: 'flex';
     flex-direction: 'row';
 }
 
-
 /** ARV Tile Styles */
+ .tileARV {
+    height: 100px;
+    padding: 1px 0 16px 16px;
+    margin: 20px 20px;
+    border: solid 1px #e0e0e0; 
+    flex-direction: column;
+    background-color: #ffffff;
+
+}
+.tileTitleARV {
+    height: 18px;
+    margin: 30px 60px 10px 0;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.29;
+    letter-spacing: 0.16px;
+    color: #525252;
+    display: block;
+}
+
+.tileSubTitleARV {
+    height: 16px;
+    font-size: 16px;
+    line-height: 1.33;
+    letter-spacing: 0.32px;
+    color: #525252;
+    display: block;
+}
+
+.tileValueARV {
+    display: block; 
+    font-size: 20px;
+    line-height: 1.29; 
+    color: #161616;
+}
+.tabletTileTitleARV { 
+    margin: 4px 4px;
+    font-size: 14px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.29;
+    letter-spacing: 0.16px;
+    color: #525252; 
+}
+.tileBoxARV {
+    display: flex;   
+    margin: 1px 21rem 1px 1rem; 
+}
+.tileBoxColumnARV {
+    width: 100%;      
+}
