--- a/packages/esm-hiv-app/src/views/hts/care-and-treatment/lab-results/Tabs/patient-list.scss
+++ b/packages/esm-hiv-app/src/views/hts/care-and-treatment/lab-results/Tabs/patient-list.scss
@@ -37,3 +37,21 @@
   display: flex;
   justify-content: right;
 }
+
+.container {
+  margin-top: 16px;
+  margin-left: inherit;
+  width: 100%;
+  overflow-y: hidden;
+}
+
+.tabContainer{
+margin-top: 16px;
+padding-left: 1rem;
+background-color: #ffffff;
+
+}
+
+.tabContainer li button{
+width: 100% !important;
+}
