--- a/packages/esm-commons-lib/src/components/encounter-list/encounter-list.scss
+++ b/packages/esm-commons-lib/src/components/encounter-list/encounter-list.scss
@@ -32,6 +32,6 @@
   //padding-right: 2rem;
 }
 
-.widgetContainer :global(.bx--data-table) thead th button span {
+.widgetContainer :global(.cds--data-table) thead th button span {
   height: unset !important;
 }
