--- a/packages/esm-commons-lib/src/components/ohri-form-launcher/launcher-with-intent.scss
+++ b/packages/esm-commons-lib/src/components/ohri-form-launcher/launcher-with-intent.scss
@@ -15,6 +15,6 @@
   color: $interactive-01;
 }
 
-:global(.bx--tooltip--definition .bx--tooltip__trigger) {
+:global(.cds--tooltip--definition .cds--tooltip__trigger) {
   border-bottom: none;
 }
