--- a/packages/esm-commons-lib/src/workspace/patient-list-workspace.scss
+++ b/packages/esm-commons-lib/src/workspace/patient-list-workspace.scss
@@ -96,7 +96,7 @@
   color: $interactive-01;
 }
 
-:global(.bx--tooltip--definition .bx--tooltip__trigger) {
+:global(.cds--tooltip--definition .cds--tooltip__trigger) {
   border-bottom: none;
 }
 
