--- a/packages/esm-ohri-core-app/src/ohri-dashboard/side-menu/ohri-dashboard-side-nav.scss
+++ b/packages/esm-ohri-core-app/src/ohri-dashboard/side-menu/ohri-dashboard-side-nav.scss
@@ -14,23 +14,23 @@
   padding: 0.5rem 1rem 0.5rem;
 }
 
-.sideNav :global(a.bx--side-nav__link[aria-current=page]:before),
-.sideNav :global(.bx--side-nav__submenu[aria-expanded=false]:before)
+.sideNav :global(a.cds--side-nav__link[aria-current=page]:before),
+.sideNav :global(.cds--side-nav__submenu[aria-expanded=false]:before)
 {
   // background-color: $brand-teal-01;
 }
 
-.sideNav :global(ul.bx--side-nav__items) {
+.sideNav :global(ul.cds--side-nav__items) {
   border-style: solid !important;
   border-right: 1px #e0e0e0;
 }
 
 @media (max-width: 1200px) {
-  .sideNav :global(.bx--side-nav) {
+  .sideNav :global(.cds--side-nav) {
     z-index: -100 !important;
   }
 
-  .sideNav :global(.bx--side-nav__items) {
+  .sideNav :global(.cds--side-nav__items) {
     padding: 0 !important;
   }
 }
