--- a/packages/esm-ohri-core-app/src/root.scss
+++ b/packages/esm-ohri-core-app/src/root.scss
@@ -1,7 +1,5 @@
-@import "~carbon-components/scss/globals/scss/vendor/@carbon/elements/scss/type/styles";
-@import "~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/spacing";
-@import "~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/layout";
-@import "carbon-components/scss/globals/scss/typography.scss";
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
 @import "~@openmrs/esm-styleguide/src/vars";
 
 $ui-01: #f4f4f4;
@@ -104,7 +102,7 @@ div[class*='-esm-login__styles__center'] > img {
   width: 16rem !important;
 }
 
-:global(.bx--overflow-menu) > div {
+:global(.cds--overflow-menu) > div {
   width: 15rem !important;
 }
 
