--- a/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
+++ b/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
@@ -28,7 +28,7 @@
 .cardTitle {
     display: flex;
     justify-content: space-between;
-    padding: $spacing-04 0 $spacing-04 $spacing-05;
+    padding: spacing.$spacing-04 0 spacing.$spacing-04 spacing.$spacing-05;
 }
 
 .cardTitle>h4:after {
