--- a/packages/esm-cervical-cancer-app/src/views/common.scss
+++ b/packages/esm-cervical-cancer-app/src/views/common.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: $spacing-04 0 $spacing-04 $spacing-05;
+  padding: spacing.$spacing-04 0 spacing.$spacing-04 spacing.$spacing-05;
 }
 
 .widgetHeaderContainer > h4:after {
@@ -21,7 +21,7 @@
 
 .toggleButtons {
   width: fit-content;
-  margin: 0 $spacing-03;
+  margin: 0 spacing.$spacing-03;
 }
 
 .tabContainer div[role='tabpanel'] {
@@ -31,8 +31,8 @@
 .tabContainer li button {
   width: 100% !important;
   }
-  
-  
+
+
   .hivStatusTag {
   min-width: 80px;
   }
