--- a/packages/esm-commons-lib/src/components/empty-state/empty-state.scss
+++ b/packages/esm-commons-lib/src/components/empty-state/empty-state.scss
@@ -1,21 +1,23 @@
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
 @import "../../root.scss";
 
 .action {
-  margin-bottom: $spacing-03;
+  margin-bottom: spacing.$spacing-03;
 }
 
 .content {
-  @include carbon--type-style("productive-heading-01");
+  @include type.type-style("heading-compact-01");
   color: $text-02;
-  margin-top: $spacing-05;
-  margin-bottom: $spacing-03;
+  margin-top: spacing.$spacing-05;
+  margin-bottom: spacing.$spacing-03;
 }
 
 .heading {
   text-align: left;
   text-transform: capitalize;
   margin-bottom: 1rem;
-  @include carbon--type-style("productive-heading-03");
+  @include type.type-style("heading-03");
   color: $text-02;
 }
 
