--- a/packages/esm-commons-lib/src/components/error-state/error-state.scss
+++ b/packages/esm-commons-lib/src/components/error-state/error-state.scss
@@ -1,23 +1,24 @@
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
 @import "../../root.scss";
 
 .errorMessage {
-  @include carbon--type-style("productive-heading-02");
-  color: $text-01;
+  @include type.type-style("heading-compact-02");
   margin-top: 2.25rem;
-  margin-bottom: $spacing-03;
+  margin-bottom: spacing.$spacing-03;
 }
 
 .errorCopy {
-  margin-bottom: $spacing-03;
-  @include carbon--type-style("body-long-01");
+  margin-bottom: spacing.$spacing-03;
+  @include type.type-style("body-01");
   color: $text-02;
 }
 
 .heading {
   text-align: left;
   text-transform: capitalize;
-  margin-bottom: $spacing-05;
-  @include carbon--type-style("productive-heading-03");
+  margin-bottom: spacing.$spacing-05;
+  @include type.type-style("heading-03");
   color: $text-02;
 }
 
