--- a/packages/esm-commons-lib/src/components/ohri-form-launcher/ohri-overflow-menu.scss
+++ b/packages/esm-commons-lib/src/components/ohri-form-launcher/ohri-overflow-menu.scss
@@ -1,7 +1,7 @@
 @import "../../root.scss";
 
 .actionsButtonText {
-  @include carbon--type-style("body-short-01");
+  @include type.type-style("body-compact-01");
   color: $interactive-01;
 }
 
