--- a/packages/esm-commons-lib/src/workspace/patient-list-workspace.scss
+++ b/packages/esm-commons-lib/src/workspace/patient-list-workspace.scss
@@ -1,3 +1,5 @@
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
 @import "../root.scss";
 
 .patientListWorkspaceContainer {
@@ -37,7 +39,7 @@
 }
 
 .bannerTitle {
-  @include carbon--type-style("body-short-02");
+  @include type.type-style("body-compact-02");
   margin-right: 0.25rem;
   padding-left: 16px;
 }
@@ -47,7 +49,7 @@
 }
 
 .demographics {
-  @include carbon--type-style("body-short-01");
+  @include type.type-style("body-compact-01");
   color: $color-gray-70;
   margin-top: 0.375rem;
   padding-left: 16px;
@@ -79,7 +81,7 @@
 }
 
 .identifiers {
-  @include carbon--type-style("body-short-01");
+  @include type.type-style("body-compact-01");
   color: $ui-04;
 }
 
@@ -92,7 +94,7 @@
 }
 
 .actionsButtonText {
-  @include carbon--type-style("body-short-01");
+  @include type.type-style("body-compact-01");
   color: $interactive-01;
 }
 
