--- a/packages/esm-form-render-app/src/render/form-render.scss
+++ b/packages/esm-form-render-app/src/render/form-render.scss
@@ -1,3 +1,6 @@
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
+@import "~@openmrs/esm-styleguide/src/vars";
 @import "../root.scss";
 
 .mainWrapper {
@@ -35,7 +38,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: $spacing-04 0 $spacing-04 $spacing-05;
+  padding: spacing.$spacing-04 0 spacing.$spacing-04 spacing.$spacing-05;
 }
 
 .widgetHeaderContainer > h4:after {
@@ -48,7 +51,7 @@
 
 .toggleButtons {
   width: fit-content;
-  margin: 0 $spacing-03;
+  margin: 0 spacing.$spacing-03;
 }
 
 .formRenderContent {
