--- a/packages/esm-commons-lib/src/components/ohri-home/ohri-home.scss
+++ b/packages/esm-commons-lib/src/components/ohri-home/ohri-home.scss
@@ -1,7 +1,7 @@
 @import "../../root.scss";
 
 .mainWrapper {
-    max-width: 1440px;
+    // max-width: 1440px;
     min-height: 100vh;
     background-color: #ffffff;
     padding: 16px !important;
