--- a/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
+++ b/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
@@ -71,6 +71,8 @@
     font-size: 20px;
     line-height: 1.29;
     color: #161616;
+    display: block;
+    margin: 15px 65px 24px 0;
 }
 .tabletTileTitle {
     margin: 0px 0px 10px 20px;
