--- a/packages/esm-cervical-cancer-app/src/root.scss
+++ b/packages/esm-cervical-cancer-app/src/root.scss
@@ -18,10 +18,6 @@ $interactive-01: #0f62fe;
 $brand-teal-01: #3197D9;
 $ohri-input-width: 22.313rem;
 $ohri-home-background: #ededed;
-
-$brand-color-01: #1A3054; // primary
-$brand-color-02: #131E35; // darker
-$brand-color-03: #3197D9; // underline - 3197D9
 $button-primary: #0078A6;
 
 .productiveHeading01 {
@@ -115,6 +111,6 @@ nav :global(.cds--accordion__content) {
 nav :global(.cds--accordion__content) > a {
   background-color: #cecece !important;
   color: #161616 !important;
-  border-left-color: $brand-color-01  !important;
+  border-left-color: var(--brand-01)  !important;
   font: bolder;
 }
