--- a/packages/esm-commons-lib/src/components/encounter-list/encounter-list.scss
+++ b/packages/esm-commons-lib/src/components/encounter-list/encounter-list.scss
@@ -4,6 +4,7 @@
 
 .widgetContainer {
   background-color: $ui-background;
+  border: 1px solid #e0e0e0;
 }
 
 .widgetHeaderContainer {
@@ -18,7 +19,7 @@
   display: block;
   width: 2rem;
   padding-top: 0.188rem;
-  border-bottom: 0.375rem solid $brand-color-01;
+  border-bottom: 0.375rem solid var(--brand-03);
 }
 
 .newServiceEnrolmentBtn {
@@ -28,10 +29,6 @@
 
 .newServiceEnrolmentBtn > button {
   background-color: $ui-background;
-}
-
-.toggleButtons {
-  //padding-right: 2rem;
 }
 
 .widgetContainer :global(.cds--data-table) thead th button span {
