--- a/packages/esm-form-render-app/src/render/form-render.scss
+++ b/packages/esm-form-render-app/src/render/form-render.scss
@@ -46,7 +46,7 @@
   display: block;
   width: 2rem;
   padding-top: 0.188rem;
-  border-bottom: 0.375rem solid $brand-color-01;
+  border-bottom: 0.375rem solid var(--brand-01);
 }
 
 .toggleButtons {
