OHRI-1239 MNCH Mother & Child Summary Widgets aligned

--- a/packages/esm-ohri-pmtct-app/src/root.scss
+++ b/packages/esm-ohri-pmtct-app/src/root.scss
@@ -118,3 +118,14 @@ nav :global(.cds--accordion__content) > a {
 :global(.cds--tab--list) button {
   max-width: 16rem !important;
 }
+
+div[class*='-openmrs-esm-ohri-pmtct__encounter-list__widgetContainer___2X088'] {
+  margin-top: 1rem !important;
+  }
+  
+div[class*='-openmrs-esm-ohri-pmtct__expandable-list__expandableListContainer___1uL8f'] {
+  margin-top: 2rem !important;
+  }
+  // -openmrs-esm-ohri-pmtct__expandable-list__expandableListContainer___1uL8f .cds--data-table-container 
+  // height: 15rem;
+// .-openmrs-esm-ohri-pmtct__encounter-list__widgetContainer___2X088 
