OHRI-1250 adds additional patient datatable

--- a/packages/esm-commons-lib/src/components/patient-lists/patient-list.scss
+++ b/packages/esm-commons-lib/src/components/patient-lists/patient-list.scss
@@ -2,6 +2,10 @@
 @use '@carbon/styles/scss/type';
 @import '../../root.scss';
 
+.patientListContainer {
+  padding-bottom: 1rem;
+}
+
 .widgetContainer {
   background-color: $ui-background;
 }
