--- a/packages/esm-cervical-cancer-app/src/views/common.scss
+++ b/packages/esm-cervical-cancer-app/src/views/common.scss
@@ -19,7 +19,7 @@
   padding-top: 0.188rem;
   border-bottom: 0.375rem solid var(--brand-01);
 }
-
+x
 .toggleButtons {
   width: fit-content;
   margin: 0 spacing.$spacing-03;
@@ -31,9 +31,4 @@
 
 .tabContainer li button {
   width: 100% !important;
-  }
-
-
-  .hivStatusTag {
-  min-width: 80px;
-  }
+}
