switches to percentage

--- a/packages/esm-ohri-core-app/src/root.scss
+++ b/packages/esm-ohri-core-app/src/root.scss
@@ -130,5 +130,5 @@ div[class*='-esm-patient-vitals__vitals-header__row'] {
 // Patient chart overrides
 
 div[class*='-esm-patient-chart__patient-chart__chartReview'] {
-  max-width: max-content !important;
+  max-width: 100% !important;
 }
