OHRI-1479 encounter tile responsiveness

--- a/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
+++ b/packages/esm-commons-lib/src/components/encounter-tile/encounter-tile.scss
@@ -49,8 +49,8 @@
 }
 
 .tileTitle {
-    height: 18px;
-    margin: 15px 65px 24px 0;
+    min-height: 18px;
+    margin: 15px 65px 8px 0;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.29;
