OHRI-1462 ohri welcome revamp to match design

--- a/packages/esm-commons-lib/src/components/ohri-home/welcome-section/ohri-welcome-section.scss
+++ b/packages/esm-commons-lib/src/components/ohri-home/welcome-section/ohri-welcome-section.scss
@@ -1,4 +1,9 @@
-.welcome {
+.welcomeContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.location {
   font-size: 16px;
   font-stretch: normal;
   font-style: normal;
@@ -7,16 +12,15 @@
   color: #525252;
   font-weight: 400;
   padding-bottom: 4px;
-
 }
 
-.welcomeDetails{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.dashboardDetails {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.userWelcome {
+.dashboardTitle {
   font-size: 28px;
   font-weight: normal;
   font-stretch: normal;
@@ -24,7 +28,6 @@
   line-height: 1.29;
   letter-spacing: normal;
   color: #161616;
-  margin-bottom: 16px;
 }
 
 .currentDate {
@@ -41,12 +44,10 @@
   color: #525252;
 }
 
-.calendarIcon{
-    width: 25px;
-    height: 25px;
-    padding-right: 1px;
+.calendarIcon {
+  padding: 1px;
 }
 
-.cds--tab-content{
+.cds--tab-content {
   background-color: ivory !important;
 }
