--- a/packages/esm-form-render-app/src/render/form-render.scss
+++ b/packages/esm-form-render-app/src/render/form-render.scss
@@ -108,7 +108,7 @@
   margin-top: -0.5rem;
 }
 
-.renderColumn > div > form .renderDropdown {
+.renderColumn > div > form .renderField {
   padding-top: 0.8rem;
   width: 400px;
 }
