--- a/packages/esm-commons-lib/src/components/patient-lists/patient-list.scss
+++ b/packages/esm-commons-lib/src/components/patient-lists/patient-list.scss
@@ -2,30 +2,49 @@
 @use '@carbon/styles/scss/type';
 @import '../../root.scss';
 
-.patientListContainer {
-  padding-bottom: 1rem;
+.searchField {
+  width: 100%;
+  max-width: 250px;
+  border: 0px !important;
 }
 
-.widgetContainer {
-  background-color: $ui-background;
+.searchBox {
+  width: 100%;
+  display: flex;
+  justify-content: right;
 }
 
-.widgetHeaderContainer {
+.searchContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+.searchContainer > div {
+  align-self: center;
+  justify-self: flex-end;
+}
+
+.search {
+  width: 100%;
+  max-width: 16rem;
+  background-color: $ui-02;
+  border-bottom-color: $ui-03;
+}
+
+.heading {
+  text-align: left;
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+  @include type.type-style("heading-03");
+  color: $text-02;
+}
+
+.headerWrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: spacing.$spacing-04 0 spacing.$spacing-04 spacing.$spacing-05;
 }
-
-.widgetHeaderContainer > h4:after {
-  content: '';
-  display: block;
-  width: 2rem;
-  padding-top: 0.188rem;
-  border-bottom: 0.375rem solid var(--brand-01);
-}
-
-.toggleButtons {
-  width: fit-content;
-  margin: 0 spacing.$spacing-03;
+.tile {
+  text-align: center;
+  border: 1px solid $ui-03;
 }
