--- a/packages/esm-commons-lib/src/components/card-summary/summary-card.scss
+++ b/packages/esm-commons-lib/src/components/card-summary/summary-card.scss
@@ -1,4 +1,6 @@
+@use '@carbon/styles/scss/colors';
 @use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
 @import "../../root.scss";
 
 .title {
@@ -23,6 +25,7 @@
   height: 100%;
   padding: 1px 0 16px 16px;
   margin-top: 1rem;
+  margin-bottom: 1rem;
   border: solid 1px #e0e0e0;
   display: flex;
   flex-direction: column;
@@ -31,27 +34,19 @@
 }
 
 .tileTitle {
-  height: 18px;
-  margin: 15px 65px 24px 0;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.29;
-  letter-spacing: 0.16px;
-  color: #525252;
+  @include type.type-style('label-01');
   display: block;
+  // margin: 15px 65px 24px 0;
 }
 
 .tileValue {
+  @include type.type-style("heading-04");
   display: block;
-  font-size: 20px;
-  line-height: 1.29;
-  color: #161616;
-  display: block;
-  margin: 15px 65px 24px 0;
+  // margin: 15px 65px 24px 0;
 }
 
 .columnContainer {
-  margin: 0px 0px 10px 20px;
+  margin: 0px 0px 20px 20px;
   font-size: 14px;
   font-weight: 500;
   font-stretch: normal;
