OHRI-2013 tb previous cases table

--- a/packages/esm-commons-lib/src/components/encounter-list/encounter-list.scss
+++ b/packages/esm-commons-lib/src/components/encounter-list/encounter-list.scss
@@ -5,6 +5,7 @@
 .widgetContainer {
   background-color: $ui-background;
   border: 1px solid #e0e0e0;
+  margin-bottom: 1rem;
 }
 
 .widgetHeaderContainer {
