--- a/packages/esm-commons-lib/src/root.scss
+++ b/packages/esm-commons-lib/src/root.scss
@@ -114,3 +114,7 @@ div[class*='-esm-login__styles__center'] > img {
     background-color: #e0e0e0;
   }
 } 
+
+:global(.cds--side-nav--ux .cds--side-nav__item) {
+  list-style: none;
+}
